argocd/hangsha-prod/hangsha-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hangsha-api
  labels:
    app: hangsha-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hangsha-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: hangsha-api
    spec:
      serviceAccountName: hangsha-api-prod
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/hangsha-prod/hangsha-server
          name: hangsha-api
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            timeoutSeconds: 3
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: hangsha-api
spec:
  type: ClusterIP
  selector:
    app: hangsha-api
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hangsha-api
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - hangsha-api.wafflestudio.com
  http:
    - route:
        - destination:
            host: hangsha-api
      headers:
        request:
          set:
            X-Forwarded-Proto: "https"
